@startuml
!include Ventoriq_00_Style.puml

title Ventoriq - Authentifizierung, Session und Nutzerdatenbank

left to right direction

skinparam nodesep 90
skinparam ranksep 90
skinparam linetype ortho

package "Authentifizierung" as AUTH {
  class AuthService <<Service>> {
    + registerUser(username)
    + loginWithPassKey(passkey)
    + resetPassKeyWithRecoveryKey(key)
    + deleteLocalProfileWithRecoveryKey(key, user)
    + hashValue(value)
  }

  class AuthDatabaseService <<DB-Service>> {
    + createAuthUser()
    + createUserDatabase()
    + getUserByPassKeyHash()
    + getUserByRecoveryKeyHash()
    + deleteAuthUserByRecoveryKeyHash()
  }

  class PassKeyRecord <<DTO>> {
    + userId
    + username
    + passKeyHash
    + recoveryKeyHash
    + databaseName
  }
}

package "Session" as SESSION {
  class StateManager <<Singleton>> {
    + login(user)
    + logout()
    + isLoggedIn()
    + getCurrentUser()
  }

  class UserDatabaseAccess <<Helper>> {
    + getCurrentUserDatabase()
    + getCurrentDatabaseName()
  }
}

package "Datenbankzugriff" as DBACCESS {
  class GlobalDatabaseManager <<Singleton>> {
    + GetOrCreateDatabase(name)
    + CloseDatabase(name)
  }

  class DataBase <<SQLite-Fassade>> {
    + setupAuthDB()
    + setupDatabase()
    + getAllUsers()
    + deleteUser()
  }

  entity UserDB {
    + id
    + name
    + passKeyHash
    + recoveryKeyHash
  }
}

AuthService --> AuthDatabaseService : nutzt
AuthService --> StateManager : setzt Login
AuthService --> PassKeyRecord : liefert Ergebnis

AuthDatabaseService --> DataBase : liest / schreibt
DataBase --> UserDB : Auth-Tabelle

StateManager --> PassKeyRecord : hält currentUser

UserDatabaseAccess --> StateManager : liest Nutzer
UserDatabaseAccess --> GlobalDatabaseManager : öffnet Nutzer-DB

GlobalDatabaseManager --> DataBase : verwaltet Instanz

PassKeyRecord ..> UserDB : abgeleitet aus

note bottom
Direkte Pfeile zeigen echte Nutzung.
Der gestrichelte Pfeil zeigt, dass PassKeyRecord aus UserDB-Daten gebildet wird.
Doppelte Pfeile wurden bewusst vermieden.
end note

@enduml